--- a/static/md/13.0_Functional_Features.md
+++ b/static/md/13.0_Functional_Features.md
@@ -8,4 +8,39 @@ class: middle, center
 
 class: left
 
+# Functional Programming
+
+* Rust is significantly inspired by functional programming
+
+* Programming in a functional style often includes using functions as values 
+
+    * by passing them in arguments, 
+
+    * returning them from other functions, 
+
+    * assigning them to variables for later execution, and so forth
+
+---
+
+class: left
+
+# Functional Features
+
+**Closures :** A function-like construct you can store in a variable
+
+**Iterators :** A way of processing a series of elements
+
+* Master closures and iterators to write idiomatic and fast Rust code
+
+* Pattern matching and enums are also influenced by Functional Style
+
+---
+
+class: left
+
 # Summary
+
+* Rust also has Functional Concepts along with OOP
+
+* Closures and Iterators are the most useful apart from Pattern matching and 
+  enums
