--- a/static/md/13.1_Closures.md
+++ b/static/md/13.1_Closures.md
@@ -2,7 +2,302 @@ class: middle, center
 
 ### 13.1
 
-# Closures: Anonymous Functions that Can Capture Their Environment
+# Closures
+
+---
+
+class: left
+
+### 13.1
+
+# Closures
+
+**Anonymous Functions** that can capture their environment
+
+* Save them in a variable or pass as arguments to other functions
+
+* Create it in one place and call it to evaluate in a different context
+
+* Unlike functions, closures capture values from the scope in which they’re called
+
+* Allow for code reuse and behavior customization
+
+---
+
+class: left
+
+# Creating an Abstraction of Behavior with Closures
+
+*
+
+---
+
+class: left
+
+# Refactoring Using Functions
+
+---
+
+class: left
+
+# Defining Closure
+
+```rust
+let expensive_closure = |num| {
+    println!("calculating slowly...");
+    thread::sleep(Duration::from_secs(2));
+    num // returned
+};
+```
+
+* Start with a pair of vertical pipes `(|)`
+
+* Specify the parameters inside it, `|param1, param2|`
+
+* `{}` after the `|` holds the body of the closure
+
+* Optional if the closure body is a single expression
+
+* Ends with a semicolon `;` to finish the `let` statement
+
+* Just like functions, last expression is implicitly returned
+
+---
+
+class: left
+
+# Refactoring with Closures to Store Code
+
+---
+
+class: left
+
+# Closure Type Inference and Annotation
+
+Closures unlike functions don’t require to type annotate...
+
+* the parameters or
+
+* the return value
+
+because they are...
+
+* Stored in variables
+
+* Used without naming and exposing to the users of the library
+
+* Short and only relevant within a narrow context
+
+* Annoying to annotate in these small, annonymous functions
+
+Its optional to annotate
+
+---
+
+class: left
+
+# Syntax : Function vs Closure
+
+```rust
+// Function definition with type annotation
+fn  add_one_v1   (x: u32) -> u32 { x + 1 }
+// Closure definition with type annotation
+let add_one_v2 = |x: u32| -> u32 { x + 1 };
+// Closure with out type annotation
+let add_one_v3 = |x|             { x + 1 };
+// Closure with body containing single expression
+let add_one_v4 = |x|               x + 1  ;
+```
+
+---
+
+class: left
+
+# Type Inference
+
+```rust
+let example_closure = |x| x;
+let s = example_closure(String::from("hello"));
+let n = example_closure(5);
+```
+
+```rust
+error[E0308]: mismatched types
+ --> src/main.rs
+  |
+  | let n = example_closure(5);
+  |                         ^ expected struct `std::string::String`, found
+  integral variable
+  |
+  = note: expected type `std::string::String`
+             found type `{integer}`
+```
+
+* Calling a closure whose types are inferred with two different types
+  throws an error
+
+* First time we call example_closure with the String value,
+
+  * the compiler infers the type of x and
+
+  * the return type of the closure to be String
+
+* Those types are then locked into the closure in example_closure
+
+* Throws error on calling with different type
+
+---
+
+class: left
+
+# Storing Closures Using Generic Parameters and the Fn Traits
+
+* WIP
+
+---
+
+class: left
+
+# Limitations of the Cacher Implementation
+
+* WIP
+
+---
+
+class: left
+
+# Capturing the Environment with Closures
+
+* Closures can capture their environment and access variables from the scope in
+  which they’re defined
+
+```rust
+fn main() {
+    let x = 4;
+    let equal_to_x = |z| z == x;
+    let y = 4;
+    assert!(equal_to_x(y));
+}
+```
+
+* `x` is not one of the parameters of `equal_to_x`
+
+* But, the `equal_to_x` closure is allowed to use the x variable
+
+* Access to all variables defined in the same scope that `equal_to_x` is defined
+  in
+
+---
+
+class: left
+
+# Capturing environment : Function
+
+```rust
+fn main() {
+    let x = 4;
+    fn equal_to_x(z: i32) -> bool { z == x }
+    let y = 4;
+    assert!(equal_to_x(y));
+}
+```
+
+```rust
+error[E0434]: can't capture dynamic environment in a fn item; use the || { ...
+} closure form instead
+ --> src/main.rs
+  |
+4 |     fn equal_to_x(z: i32) -> bool { z == x }
+  |                                          ^
+```
+
+Functions can't capture the environment like closures do
+
+---
+
+class: left
+
+# Capturing Values
+
+* Closure uses memory to store the captured values for use in the closure body
+
+* Closures can capture values from their environment in three ways,
+
+* Which directly map to the three ways a function can take a parameter: 
+
+  * taking ownership, 
+  
+  * borrowing immutably, 
+  
+  * and borrowing mutably
+
+* These are encoded in the three Fn traits as follows:
+
+  * `FnOnce` take ownership of the variables and move them into the closure’s    
+    environment 
+
+  * `Fn` borrows values from the environment immutably
+
+  * `FnMut` can change the environment because it mutably borrows values
+
+* By default, Rust infers which trait to use based on how the closure uses the 
+  values from the environment
+
+---
+
+class: left
+
+# Examples
+
+* `equal_to_x` closure borrows `x` immutably (so equal_to_x has the Fn trait) 
+  because the body of the closure only needs to read the value in x
+
+```rust
+fn main() {
+    let x = vec![1, 2, 3];
+    let equal_to_x = move |z| z == x;
+    println!("can't use x here: {:?}", x);
+    let y = vec![1, 2, 3];
+    assert!(equal_to_x(y));
+}
+```
+
+* `move` keyword before the parameter list will force the closure to take 
+  ownership of the values it uses in the environment
+
+* Useful when passing a closure to a new thread to move the data so it’s owned 
+  by the new thread
+
+```rust
+fn main() {
+    let x = vec![1, 2, 3];
+    let equal_to_x = move |z| z == x;
+    println!("can't use x here: {:?}", x);
+    let y = vec![1, 2, 3];
+    assert!(equal_to_x(y));
+}
+```
+
+```rust
+error[E0382]: use of moved value: `x`
+ --> src/main.rs:6:40
+  |
+4 |     let equal_to_x = move |z| z == x;
+  |                      -------- value moved (into closure) here
+5 |
+6 |     println!("can't use x here: {:?}", x);
+  |                                        ^ value used here after move
+  |
+  = note: move occurs because `x` has type `std::vec::Vec<i32>`, which does not
+  implement the `Copy` trait
+```
+
+* Since `equal_to_x` has ownership of `x` we can't use it in the main 
+
+* Respects the ownership and borrowing rules of the data types
+
+* You can start with Fn and the compiler will tell you if you need `FnMut` or 
+  `FnOnce` based on what happens in the closure body
 
 ---
 
