--- a/static/md/13.2_Iterators.md
+++ b/static/md/13.2_Iterators.md
@@ -8,4 +8,67 @@ class: middle, center
 
 class: left
 
+# Iterators
+
+* **Iterator pattern** allows you to perform some task on a sequence of items
+
+* It is responsible for the logic of iterating over each item and determining 
+  when the sequence has finished
+
+* **iterators are lazy**, they have no effect until we call methods that consume
+  the iterator to use it up
+
+```rust
+let v1 = vec![1, 2, 3];
+let v1_iter = v1.iter();
+```
+
+---
+
+class: left
+
+# The Iterator Trait and the next Method
+
+* 
+
+---
+
+class: left
+
+# Methods that Consume the Iterator
+
+---
+
+class: left
+
+# Methods that Produce Other Iterators
+
+---
+
+class: left
+
+# Using Closures that Capture Their Environment
+
+---
+
+class: left
+
+# Creating Our Own Iterators with Iterator
+
+---
+
+class: left
+
+# Using Our Counter Iterator’s next Method
+
+---
+
+class: left
+
+# Using Other Iterator Trait Methods
+
+---
+
+class: left
+
 # Summary
