--- a/static/md/15.0_Smart_Pointers.md
+++ b/static/md/15.0_Smart_Pointers.md
@@ -8,4 +8,89 @@ class: middle, center
 
 class: left
 
+# Pointers
+
+* A pointer is a variable that contains an address in memory
+
+* This address refers to, or “points at,” some other data
+
+---
+
+class: left
+
+# Refernces
+
+* The most common kind of pointer in Rust is a reference
+
+* References are indicated by the `&` symbol and borrow the value they point to
+
+* They don't special capabilities other than refering to data
+
+* They don't have any overhead
+
+* References are the most commonly used pointers
+
+---
+
+class: left
+
+# Smart Pointers
+
+* Smart pointers are data structures that act like a pointer but also have
+  additional metadata and capabilities
+
+* Smart pointers defined in the standard library provide extra functionality beyond that provided
+  by references
+
+* **Reference counting smart pointer** : Enables you to have multiple owners of
+  data by keeping track of the number of owners and, when no owners remain,
+  taking care of cleaning up the data.
+
+* `String` and `Vec<T>` are smart pointers because
+
+  * They own some memory and allow you to manipulate it.
+
+  * They also have metadata (such as their capacity) and
+
+  * extra capabilities or guarantees
+
+* References are pointers that only borrow data; in contrast, in many cases,
+  smart pointers own the data they point to.
+
+* They are usually implemented using structs
+
+---
+
+class: left
+
+# Rust vs Structs
+
+* The characteristic that distinguishes a smart pointer from an ordinary struct is that smart pointers implement the `Deref` and `Drop` traits
+
+* The `Deref` trait allows an instance of the smart pointer struct to behave like a reference so we can write code that works with either references or smart pointers.
+
+* The `Drop` trait allows us to customize the code that is run when an instance of the smart pointer goes out of scope.
+
+---
+
+class: left
+
+# types of smart pointers
+
+* Many libraries have their own smart pointers, and you can even write your own
+
+  * Box<T> for allocating values on the heap
+
+  * Rc<T>, a reference counted type that enables multiple ownership
+
+  * Ref<T> and RefMut<T>, accessed through RefCell<T>, a type that enforces the
+    borrowing rules at runtime instead of compile time
+
+
+
+---
+
+class: left
+
 # Summary
+
