--- a/static/md/15.2_deref.md
+++ b/static/md/15.2_deref.md
@@ -14,4 +14,34 @@ class: left
 
 class: left
 
+# Following the Pointer to the Value with *
+
+---
+
+class: left
+
+# Using Box<T> Like a Reference
+
+---
+
+class: left
+
+# Treating a Type Like a Reference by Implementing the Deref Trait
+
+---
+
+class: left
+
+# Implicit Deref Coercions with Functions and Methods
+
+---
+
+class: left
+
+# How Deref Coercion Interacts with Mutability
+
+---
+
+class: left
+
 # Summary
