--- a/static/md/15.3_The_Drop_Trait_Runs_Code_on_Cleanup.md
+++ b/static/md/15.3_The_Drop_Trait_Runs_Code_on_Cleanup.md
@@ -8,4 +8,34 @@ class: middle, center
 
 class: left
 
+# Dropping a Value Early with std::mem::drop
+
+---
+
+class: left
+
+# 
+
+---
+
+class: left
+
+# 
+
+---
+
+class: left
+
+# 
+
+---
+
+class: left
+
+# 
+
+---
+
+class: left
+
 # Summary
