--- a/static/md/15.4_Rc_the_Reference_Counted_Smart_Pointer.md
+++ b/static/md/15.4_Rc_the_Reference_Counted_Smart_Pointer.md
@@ -8,4 +8,22 @@ class: middle, center
 
 class: left
 
+# Using Rc<T> to Share Data
+
+---
+
+class: left
+
+# Cloning an Rc<T> Increases the Reference Count
+
+---
+
+class: left
+
+# 
+
+---
+
+class: left
+
 # Summary
