--- a/static/md/15.5_RefCell_and_the_Interior_Mutability_Pattern.md
+++ b/static/md/15.5_RefCell_and_the_Interior_Mutability_Pattern.md
@@ -8,4 +8,29 @@ class: middle, center
 
 class: left
 
+# Enforcing Borrowing Rules at Runtime with RefCell<T>
+
+---
+
+class: left
+
+# Interior Mutability: A Mutable Borrow to an Immutable Value
+
+---
+
+class: left
+
+# RefCell<T> Keeps Track of Borrows at Runtime
+
+---
+
+class: left
+
+# Having Multiple Owners of Mutable Data by Combining Rc<T> and RefCell<T>
+
+---
+
+class: left
+
 # Summary
+
