--- a/static/md/15.6_Reference_Cycles_Can_Leak_Memory.md
+++ b/static/md/15.6_Reference_Cycles_Can_Leak_Memory.md
@@ -8,4 +8,28 @@ class: middle, center
 
 class: left
 
+# Creating a Reference Cycle
+
+---
+
+class: left
+
+# Preventing Reference Cycles: Turn an Rc<T> into a Weak<T>
+
+---
+
+class: left
+
+# Creating a Tree Data Structure: a Node with Child Nodes
+
+---
+
+class: left
+
+# Visualizing Changes to strong_count and weak_count
+
+---
+
+class: left
+
 # Summary
