--- a/static/md/15.1_Box.md
+++ b/static/md/15.1_Box.md
@@ -2,13 +2,134 @@ class: middle, center
 
 ### 15.1
 
-# Box
+# Box<T>
 
 ---
 
 class: left
 
-# Box<T> Points to Data on the Heap and Has a Known Size
+# Box<T>
+
+* Box<T> Points to Data on the Heap and Has a Known Size
+
+* Boxes allow you to store data on the heap rather than the stack
+
+* What remains on the stack is the pointer to the heap data
+
+* No performance overhead other than storing data on the heap
+
+* No additional capabilities
+
+---
+
+class: left
+
+# Use Cases 
+
+* When you have a type whose size can’t be known at compile time, and you want 
+  to use a value of that type in a context that needs to know an exact size
+
+* When you have a large amount of data and you want to transfer ownership but 
+  ensure the data won’t be copied when you do so
+
+* When you want to own a value and only care that it’s a type that implements a 
+  particular trait rather than knowing the concrete type
+
+---
+
+class: left
+
+# Using a Box<T> to Store Data on the Heap
+
+```rust
+fn main() {
+    let b = Box::new(5);
+    println!("b = {}", b);
+}
+```
+```rust
+b = 5;
+```
+
+* We define the variable `b` to have the value of a Box that points to the 
+  value 5, which is allocated on the heap
+
+
+* We can access the data in the box in a similar way as we would if this data 
+  was on the stack
+
+* Just like any owned value, when a box goes out of scope like b does at the end of main, it will be deallocated
+
+* The deallocation happens for the box (stored on the stack) and the data it points to (stored on the heap)
+
+
+---
+
+class: left
+
+# Recursive Types
+
+* Where a value can have as part of itself another value of the same type
+
+* size can’t be known at compile time 
+
+---
+
+class: left
+
+# Boxes Enable Recursive Types
+
+* At compile time, Rust needs to know how much space a type takes up.
+
+* In Recursive Types, nesting of values could theoretically continue infinitely,
+  Rust doesn’t know how much space a value of a recursive type needs
+
+* Boxes have a known size, so by inserting a box in a recursive type definition, we can have recursive types
+
+* Boxes let us define a recursive data type without much distraction
+
+---
+
+class: left
+
+# The Cons List
+
+* A `cons` list is a data structure that comes from the Lisp programming language 
+  and its dialects
+
+* In Lisp, the `cons` function (short for “construct function”) constructs a new
+  pair from its two arguments, which usually are a single value and another 
+  pair. These pairs containing pairs form a list.
+
+* The cons function concept has made its way into more general functional 
+  programming jargon: “to cons x onto y” informally means to construct a new 
+  container instance by putting the element x at the start of this new 
+  container, followed by the container y.
+
+* Not a commonly used data structure in Rust, unlike other functional language
+
+* Vec<T> is a better choice to use, for list of items
+
+```rust
+enum List {
+    Cons(i32, List),
+    Nil,
+}
+```
+
+Defining an enum to represent a cons list data structure of i32 values
+
+---
+
+class: left
+
+# Computing the Size of a Non-Recursive Type
+
+---
+
+class: left
+
+# 
 
 ---
 
