--- a/static/md/16.0_Fearless_Concurrency.md
+++ b/static/md/16.0_Fearless_Concurrency.md
@@ -8,4 +8,47 @@ class: middle, center
 
 class: left
 
+# Creating a Reference Cycle
+
+---
+
+class: left
+
+# Explanation
+
+---
+
+class: left
+
+# Preventing Reference Cycles: Turn an Rc<T> into a Weak<T>
+
+---
+
+class: left
+
+# Adding a Reference from a Child to Its Parent
+
+---
+
+class: left
+
+# Visualizing Changes to strong_count and weak_count
+
+---
+
+class: left
+
+# 
+
+---
+
+class: left
+
 # Summary
+
+---
+
+class: left
+
+# Summary
+
