--- a/static/md/16.1_Threads.md
+++ b/static/md/16.1_Threads.md
@@ -8,4 +8,369 @@ class: middle, center
 
 class: left
 
+# Processes and Threads
+
+* In most current operating systems...
+
+* An executed program’s code is run in a process, and 
+
+* The operating system manages multiple processes at once
+
+* Within your program, you can also have independent parts that run 
+  simultaneously, using threads
+
+* Splitting the computation into multiple threads improves performance because 
+  the program does multiple tasks at the same time, 
+
+* Adds complexity.
+
+---
+
+class: left
+
+# Problems with Threads 
+
+* **Race conditions :** where threads are accessing data or resources in an 
+  inconsistent order
+
+* **Deadlocks :**, where two threads are waiting for each other to finish using
+  a resource the other thread has, preventing both threads from continuing
+
+* Bugs that only happen in certain situations and are hard to reproduce and fix reliably
+
+* Rust attempts to mitigate the negative effects of using threads. 
+
+* Programming in a multithreaded context still takes careful thought and 
+  requires a code structure that is different from programs that run in a 
+  single thread
+  
+---
+
+class: left
+
+# Model for Creating threads
+
+Generally, there are two ways of creating threads...
+
+* **1:1 :** 
+ 
+  * Operating systems provide an API for creating new threads and 
+  
+  * language calls it to create threads. 
+  
+  * One operating system thread per one language thread.
+
+* **M:N :** 
+  
+  * Many programming languages provide their own implementation of threads. 
+  
+  * They are known as green threads
+  
+  * Languages that use these green threads will execute them in the context of 
+    a different number of operating system threads. 
+    
+  * M green threads per N operating system threads, where M and N are not 
+    necessarily the same number
+
+---
+
+class: left
+
+# Runtime
+
+* Each model has its own advantages and trade-offs, and the trade-off most 
+  important to Rust is runtime suppor
+
+* Runtime we mean code that is included by the language in every binary
+
+* Every non-assembly language will have some amount of runtime code
+
+* a language has “no runtime,” often means “small runtime.” 
+
+* Smaller runtimes have fewer features but results in smaller binaries
+
+* Rust needs to have nearly no runtime
+
+---
+
+class: left
+
+# M:N Vs 1:1
+
+* The M:N model requires a larger language runtime to manage threads
+
+* Which results in a large binary and is against rust's goal
+
+* Rust standard library only provides an implementation of 1:1 threading
+
+* Rust being a low level language, there are crates available for M:N
+
+* This helps you coose overhead for aspects such as more control over which 
+  threads run when and lower costs of context switching
+ 
+---
+
+class: left
+
+# Creating a New Thread with `spawn`
+
+```rust
+use std::thread;
+use std::time::Duration;
+fn main() {
+    thread::spawn(|| {
+        for i in 1..10 {
+            println!("hi number {} from the spawned thread!", i);
+            thread::sleep(Duration::from_millis(1));
+        }
+    });
+   for i in 1..5 {
+        println!("hi number {} from the main thread!", i);
+        thread::sleep(Duration::from_millis(1));
+    }
+}
+```
+
+```text
+hi number 1 from the main thread!
+hi number 1 from the spawned thread!
+hi number 2 from the main thread!
+hi number 2 from the spawned thread!
+hi number 3 from the main thread!
+hi number 3 from the spawned thread!
+hi number 4 from the main thread!
+hi number 4 from the spawned thread!
+hi number 5 from the spawned thread!
+```
+
+---
+
+class: left
+
+# Explanation
+
+* `thread::spawn` function create a new thread
+
+* Pass it a closure containing the code we want to run in the new thread
+
+* `thread::sleep` force a thread to stop its execution for a short duration
+
+* This allows a different thread to run
+
+* The order of execution of threads depends on how your operating system 
+  schedules the threads
+
+* The new thread will be stopped when the main thread ends, whether or not it 
+  has finished running
+
+---
+
+class: left
+
+# Waiting for All Threads to Finish Using join Handles
+
+* If the main thread ends, not only stops the spawned thread prematurely, but 
+  there is no guarantee that the spawned thread will get to run at all
+
+* Because, there is no guarantee on the order in which threads run!
+
+* Fix it by saving the return value of thread::spawn in a variable
+
+* The return type of `thread::spawn` is `JoinHandle`
+
+* A `JoinHandle` is an owned value that, when we call the join method on it, 
+  will wait for its thread to finish
+
+---
+
+class: left
+
+# Example
+
+```rust
+use std::thread;
+use std::time::Duration;
+fn main() {
+    let handle = thread::spawn(|| {
+        for i in 1..10 {
+            println!("hi number {} from the spawned thread!", i);
+            thread::sleep(Duration::from_millis(1));
+        }
+    });
+    for i in 1..5 {
+        println!("hi number {} from the main thread!", i);
+        thread::sleep(Duration::from_millis(1));
+    }
+    handle.join().unwrap();
+}
+```
+
+Saving a JoinHandle from thread::spawn to guarantee the thread is run to completion
+
+* Calling `join` on the handle blocks the thread currently running until the 
+  thread represented by the handle terminates
+
+* **Blocking** a thread means, thread is prevented from performing work or exiting. 
+
+```text
+hi number 1 from the main thread!
+hi number 2 from the main thread!
+hi number 1 from the spawned thread!
+hi number 3 from the main thread!
+hi number 2 from the spawned thread!
+hi number 4 from the main thread!
+hi number 3 from the spawned thread!
+hi number 4 from the spawned thread!
+hi number 5 from the spawned thread!
+hi number 6 from the spawned thread!
+hi number 7 from the spawned thread!
+hi number 8 from the spawned thread!
+hi number 9 from the spawned thread!
+```
+
+The two threads continue alternating, but the main thread waits because of the call to handle.join() and does not end until the spawned thread is finished.
+
+
+---
+
+class: left
+
+# join
+
+```rust
+use std::thread;
+use std::time::Duration;
+
+fn main() {
+    let handle = thread::spawn(|| {
+        for i in 1..10 {
+            println!("hi number {} from the spawned thread!", i);
+            thread::sleep(Duration::from_millis(1));
+        }
+    });
+    handle.join().unwrap();
+    for i in 1..5 {
+        println!("hi number {} from the main thread!", i);
+        thread::sleep(Duration::from_millis(1));
+    }
+}
+```
+
+```text
+hi number 1 from the spawned thread!
+hi number 2 from the spawned thread!
+hi number 3 from the spawned thread!
+hi number 4 from the spawned thread!
+hi number 5 from the spawned thread!
+hi number 6 from the spawned thread!
+hi number 7 from the spawned thread!
+hi number 8 from the spawned thread!
+hi number 9 from the spawned thread!
+hi number 1 from the main thread!
+hi number 2 from the main thread!
+hi number 3 from the main thread!
+hi number 4 from the main thread!
+```
+
+The main thread will wait for the spawned thread to finish and then run its for 
+loop, so the output won’t be interleaved anymore
+
+---
+
+class: left
+
+# Using `move` Closures with Threads
+
+* `move Closures` is often used alongside `thread::spawn` because it allows us 
+  to use data from one thread in another thread
+
+```rust
+use std::thread;
+fn main() {
+    let v = vec![1, 2, 3];
+    let handle = thread::spawn(|| {
+        println!("Here's a vector: {:?}", v);
+    });
+    handle.join().unwrap();
+}
+```
+
+```rust
+error[E0373]: closure may outlive the current function, but it borrows `v`,
+which is owned by the current function
+ --> src/main.rs:6:32
+  |
+6 |     let handle = thread::spawn(|| {
+  |                                ^^ may outlive borrowed value `v`
+7 |         println!("Here's a vector: {:?}", v);
+  |                                           - `v` is borrowed here
+  |
+help: to force the closure to take ownership of `v` (and any other referenced
+variables), use the `move` keyword
+  |
+6 |     let handle = thread::spawn(move || {
+  |                                ^^^^^^^
+```
+
+* Rust infers how to capture v, and because println! only needs a reference to 
+  v, the closure tries to borrow v.
+
+
+---
+
+class: left
+
+# Invalid reference
+
+```rust
+use std::thread;
+fn main() {
+    let v = vec![1, 2, 3];
+    let handle = thread::spawn(|| {
+        println!("Here's a vector: {:?}", v);
+    });
+    drop(v); // oh no!
+    handle.join().unwrap();
+}
+```
+
+```rust
+help: to force the closure to take ownership of `v` (and any other referenced
+variables), use the `move` keyword
+  |
+6 |     let handle = thread::spawn(move || {
+  |                                ^^^^^^^
+```
+
+* The spawned thread has a reference to v inside, but the main thread 
+  immediately drops v, using the drop function
+
+* By the time
+
+---
+
+class: left
+
+# `move`
+
+```rust
+use std::thread;
+fn main() {
+    let v = vec![1, 2, 3];
+    let handle = thread::spawn(move || {
+        println!("Here's a vector: {:?}", v);
+    });
+    handle.join().unwrap();
+}
+```
+
+By adding the move keyword before the closure, we force the closure to take ownership of the values it’s using rather than allowing Rust to infer that it should borrow the values.
+
+
+* You can't drop `v` in the main function since its moved to the closure 
+
+---
+
+class: left
+
 # Summary
