--- a/static/md/16.2_Message_Passing.md
+++ b/static/md/16.2_Message_Passing.md
@@ -8,4 +8,309 @@ class: middle, center
 
 class: left
 
+# Message Passing
+
+* Increasingly popular approach to safe concurrency
+
+* Where threads or actors communicate by sending each other messages containing 
+  data
+
+> Do not communicate by sharing memory; instead, share memory by communicating.
+  --Effective Go
+
+---
+
+class: left
+
+# Channel
+
+* One major tool for sending messages across threads
+
+* Provided by Rust's standard library
+
+Channel has two halves...
+
+* **transmitter :** Code calls the method with data we want to send
+
+* **receiver :** Code calls the method with receiving end for arriving messages
+
+* A channel is said to be closed if either the transmitter or receiver half is 
+  dropped
+
+---
+
+class: left
+
+# Creating Channel
+
+```rust
+use std::sync::mpsc;
+fn main() {
+    let (tx, rx) = mpsc::channel();
+}
+```
+
+* Create new channel using the `mpsc::channel` function
+
+* `mpsc` stands for `multiple producer, single consumer`
+
+* Means a channel can have multiple sending ends that produce values but only 
+  one receiving end that consumes those values
+
+* `mpsc::channel` returns a tuple, the first element of which is the sending end
+  and the second element is the receiving end
+
+* Represented as `tx` for transmitter and `rx` for receiver
+
+* Create a channel but not do anything with it 
+
+* This won’t compile yet because Rust can’t tell what type of values we want 
+  to send over the channel
+
+---
+
+class: left
+
+# Sending Message
+
+```rust
+use std::thread;
+use std::sync::mpsc;
+fn main() {
+    let (tx, rx) = mpsc::channel();
+    thread::spawn(move || {
+        let val = String::from("hi");
+        tx.send(val).unwrap();
+    });
+}
+```
+
+Move the transmitting end into a spawned thread and have it send one string so 
+the spawned thread is communicating with the main thread
+
+* `thread::spawn` to creates a new thread
+
+* Using `move` to move `tx` into the closure so the spawned thread owns `tx`
+
+* The send method returns a `Result<T, E>` type 
+
+* Will return an error if...
+  
+  * the receiving end has already been dropped and 
+  
+  * there’s nowhere to send a value 
+
+* Call `unwrap` to panic in case of an error
+
+---
+
+class: left
+
+# Receiving Message
+
+```rust
+use std::thread;
+use std::sync::mpsc;
+
+fn main() {
+    let (tx, rx) = mpsc::channel();
+    thread::spawn(move || {
+        let val = String::from("hi");
+        tx.send(val).unwrap();
+    });
+    let received = rx.recv().unwrap();
+    println!("Got: {}", received);
+}
+```
+
+* The receiving end of a channel has two useful methods: 
+
+  * **recv :** 
+
+    * short for receive
+    
+    * Will block the main thread’s execution and wait until a value is sent 
+      down the channel
+
+    * On receiving a value, `recv` will return it in a Result<T, E>
+
+    * When the sending end of the channel closes, recv will return an error to 
+      signal that no more values will be coming
+  
+  * **try_recv :**
+
+    * Won't block the main thread
+
+    * Return a Result<T, E> immediately, 
+
+      * **Ok** value holding a message if one is available 
+      
+      * **Err** value if there aren’t any messages this time
+
+    * Useful if this thread has other work to do while waiting for messages
+
+    * Write a loop that calls try_recv every so often, handles a message if one 
+      is available, and otherwise does other work for a little while until 
+      checking again
+
+---
+
+class: left
+
+# Channels and Ownership Transference
+
+* Ownership rules play a vital role in message sending because they help us 
+  write safe, concurrent code
+
+```rust
+use std::thread;
+use std::sync::mpsc;
+
+fn main() {
+    let (tx, rx) = mpsc::channel();
+    thread::spawn(move || {
+        let val = String::from("hi");
+        tx.send(val).unwrap();
+        println!("val is {}", val);
+    });
+    let received = rx.recv().unwrap();
+    println!("Got: {}", received);
+}
+```
+```rust
+error[E0382]: use of moved value: `val`
+  --> src/main.rs:10:31
+   |
+9  |         tx.send(val).unwrap();
+   |                 --- value moved here
+10 |         println!("val is {}", val);
+   |                               ^^^ value used here after move
+   |
+   = note: move occurs because `val` has type `std::string::String`, which does
+not implement the `Copy` trait
+```
+
+`Send` function takes ownership of its parameter, and when the value is moved, 
+the receiver takes ownership of it. 
+
+This stops us from accidentally using the value again after sending it; the 
+ownership system checks that everything is okay
+
+
+---
+
+class: left
+
+# Sending Multiple Values and Seeing the Receiver Waiting
+
+```rust
+use std::thread;
+use std::sync::mpsc;
+use std::time::Duration;
+
+fn main() {
+    let (tx, rx) = mpsc::channel();
+    thread::spawn(move || {
+        let vals = vec![
+            String::from("hi"),
+            String::from("from"),
+            String::from("the"),
+            String::from("thread"),
+        ];
+        for val in vals {
+            tx.send(val).unwrap();
+            thread::sleep(Duration::from_secs(1));
+        }
+    });
+    for received in rx {
+        println!("Got: {}", received);
+    }
+}
+```
+
+```text
+Got: hi
+Got: from
+Got: the
+Got: thread
+```
+
+Because we don’t have any code that pauses or delays in the for loop in the main 
+thread, we can tell that the main thread is waiting to receive values from the
+spawned thread
+
+---
+
+class: left
+
+# Creating Multiple Producers by Cloning the Transmitter
+
+```rust
+use std::thread;
+use std::sync::mpsc;
+use std::time::Duration;
+
+fn main() {
+// --snip--
+
+let (tx, rx) = mpsc::channel();
+
+let tx1 = mpsc::Sender::clone(&tx);
+thread::spawn(move || {
+    let vals = vec![
+        String::from("hi"),
+        String::from("from"),
+        String::from("the"),
+        String::from("thread"),
+    ];
+
+    for val in vals {
+        tx1.send(val).unwrap();
+        thread::sleep(Duration::from_secs(1));
+    }
+});
+
+thread::spawn(move || {
+    let vals = vec![
+        String::from("more"),
+        String::from("messages"),
+        String::from("for"),
+        String::from("you"),
+    ];
+
+    for val in vals {
+        tx.send(val).unwrap();
+        thread::sleep(Duration::from_secs(1));
+    }
+});
+
+for received in rx {
+    println!("Got: {}", received);
+}
+
+// --snip--
+}
+```
+
+---
+
+class: left
+
+# example
+
+```text
+Got: hi
+Got: more
+Got: from
+Got: messages
+Got: for
+Got: the
+Got: thread
+Got: you
+```
+
+---
+
+class: left
+
 # Summary
