--- a/static/md/16.3_Shared_State.md
+++ b/static/md/16.3_Shared_State.md
@@ -4,8 +4,110 @@ class: middle, center
 
 # Shared State Concurrency
 
+* Message passing is a fine way of handling concurrency, but not the only one
+
+* **Message Passing concurrency** in like single ownership :
+
+  * Because once you transfer a value down a channel, you can't use that value. 
+
+* **Shared memory concurrency** is like multiple ownership : 
+
+  * multiple threads can access the same memory location at the same time
+
+  * It adds additional complexity because these different owners need managing. 
+  
+  * Rust’s type system and ownership rules assist in getting this management correct
+
+---
+
+class: left
+
+# Mutexes Allow Access to Data from One Thread at a Time
+
+* A `mutex` is an abbreviation for “mutual exclusion,” 
+
+* It only allows one thread to access some data at any given time
+
+* `mutex` guards the data it holds via the locking system
+
+* The lock is a data structure that is part of the mutex that keeps track of 
+  who currently has exclusive access to the data
+
+* To access the data in a mutex, 
+
+  * a thread must first signal that it wants access 
+  
+  * by asking to acquire the mutex’s lock
+
+---
+
+class: left
+
+# Mutex Rules
+
+* Mutexes have a reputation for being difficult to use 
+
+* Because you have to remember two rules:
+
+  * Attempt to **acquire the lock** before using the data
+
+  * Once done, **unlock the data** so other threads can acquire the lock
+
+* Management of mutexes can be incredibly tricky to get right
+
+* Rust’s type system and ownership rules, Wont let locking and unlocking go wrong
+
+---
+
+class: left
+
+# The API of `Mutex<T>`
+
+```rust
+use std::sync::Mutex;
+fn main() {
+    let m = Mutex::new(5);
+    {
+        let mut num = m.lock().unwrap();
+        *num = 6;
+    }
+    println!("m = {:?}", m);
+}
+```
+
+* `Mutex::new()` creates a new `mutex`
+
+* `lock` method acquires the lock to access the data inside the mutex
+
+* This call will ...
+
+  * block the current thread until we get the lock
+
+  * would fail if another thread holding the lock panicked
+
+* 
+
+---
+
+class: left
+
+# Multiple Ownership with Multiple Threads
+
+---
+
+class: left
+
+# Atomic Reference Counting with Arc<T>
+
+---
+
+class: left
+
+# Similarities Between RefCell<T>/Rc<T> and Mutex<T>/Arc<T>
+
 ---
 
 class: left
 
 # Summary
+
