--- a/static/md/16.4_Extensible_Concurrency_Sync_and_Send_Traits.md
+++ b/static/md/16.4_Extensible_Concurrency_Sync_and_Send_Traits.md
@@ -8,4 +8,31 @@ class: middle, center
 
 class: left
 
+# Allowing Transference of Ownership Between Threads with Send
+
+---
+
+class: left
+
+# Allowing Access from Multiple Threads with Sync
+
+---
+
+class: left
+
+# Implementing Send and Sync Manually Is Unsafe
+
+---
+
+class: left
+
 # Summary
+
+* Very little of how Rust handles concurrency is part of the language
+
+* Many concurrency solutions are implemented as crates
+
+* Type System and Borrow Checker ensure that there won’t be data races or 
+  invalid references
+
+* 
