updated examples and explanation

--- a/static/md/3.1_Variables_and_Mutability.md
+++ b/static/md/3.1_Variables_and_Mutability.md
@@ -10,7 +10,7 @@ class: left
 
 # Variables
 
-Variables are declared using `let`
+Variables are declared using **let**
 
 ```rust
 fn main() {
@@ -29,20 +29,22 @@ class: left
 
 # Constants
 
-Constants are declared using `const`
+Constants are declared using **const**
 
 ```rust
 fn main() {
-  const PIG_COUNT = 5;
-  println!("The total no of pigs are: {}", PIG_COUNT);
+  const PUPPY_COUNT: i32 = 5;
+  println!("The total no of puppies are: {}", PUPPY_COUNT);
 }
 ```
 
 ```rust
-The total no of pigs are: 5
+The total no of puppies are: 5
 ```
 
-Valid for the entire run of the program in the defined scope
+* Valid for the entire run of the program in the defined scope
+
+* While Rust can infer types for variables, you need to annotate for constants
 
 **convention:** Use all upper case with underscores between words
 
@@ -50,9 +52,9 @@ Valid for the entire run of the program in the defined scope
 
 class: left
 
-# Variables and Mutability
+# Immutable Variables
 
-Variables are immutable by default
+Variables are **immutable by default**, means you can't change them
 
 ```rust
 fn main() {
@@ -78,7 +80,9 @@ error[E0384]: cannot assign twice to immutable variable `x`
 
 class: left
 
-Add `mut` to make variables mutable
+# Mutable Variables
+
+Add **mut** keyword to make them mutable
 
 ```rust
 fn main() {
@@ -100,17 +104,15 @@ The value of x is: 6
 
 class: left
 
-# Immutable vs Constants
-
-* `immutable` is different from `const`
+# Constants vs Immutable
 
 * Constants aren’t only immutable by default, they’re always immutable
 
-* Can't assign functions to `const`
+* Can't assign functions to a `const`
 
 * Can't use if expressions with const
 
-* Can't use `mut` with `constants`
+* `mut` is not valid with `constants`
 
 ---
 
@@ -120,9 +122,9 @@ class: left
 
 ```rust
 fn main() {
-  let x = 5;
+  let x = "test";
 
-  let x = x + 1;
+  let x = 4;
 
   let x = x * 2;
 
@@ -168,4 +170,4 @@ class: left
 
 * `const` can't be mutable
 
-* `shadowing` effectively creates new variables
+* `shadowing` effectively creates new variable
