--- a/static/md/3.2_Data_Types.md
+++ b/static/md/3.2_Data_Types.md
@@ -11,8 +11,17 @@ class: left
 
 * Rust is a statically typed language and every value is of a certain `type`
 
-* You can **annotate** the types or compiler will **infer** types based on the `value` 
-  and `how it is used`
+* You can
+
+  * **annotate** the types or
+
+  * compiler will **infer** types based on the
+
+      * `value`
+
+          and
+
+      * `how it is used`
 
 ---
 class: left
@@ -30,7 +39,7 @@ Rust infers type from the value provided
 
 ```rust
 fn main() {
-  let x; 
+  let x;
   println!("The value of x is: {}", x);
 }
 ```
@@ -39,9 +48,9 @@ Rust can't infer, as no value provided and not annotated as well
 
 ```rust
 error[E0282]: type annotations needed
-   --> src/main.rs:230:7    
-    |   let x;    
-    |       ^                                           
+   --> src/main.rs:230:7
+    |   let x;
+    |       ^
     |       |
     |       cannot infer type for `_`
     |       consider giving `x` a type
@@ -67,7 +76,7 @@ class: left
 
 # Builtin Types
 
-* `scalar` 
+* `scalar`
 
 * `compound`
 
@@ -77,13 +86,13 @@ class: left
 # Scalar Types
 
 * scalar type represents a single value
-  
-  * integers 
- 
+
+  * integers
+
   * floating-point numbers
- 
-  * Booleans, and 
- 
+
+  * Booleans, and
+
   * characters
 
 ---
@@ -122,7 +131,7 @@ class: left
 
 Numbers with decimal points
 
-* Two types 
+* Two types
 
   * f32 : single-precision float
 
@@ -170,7 +179,7 @@ class: left
 
 Specified using `bool`
 
-* `true` 
+* `true`
 
 * `false`
 
@@ -186,7 +195,7 @@ class: left
 
 # Characters
 
-`char` type is the language’s most primitive alphabetic type, 
+`char` type is the language’s most primitive alphabetic type,
 
 ```rust
 fn main() {
@@ -202,7 +211,7 @@ fn main() {
 
 * Accented letters, Chinese/Japanese/Korean ideographs, emoji, and zero width spaces
 
-* a “character” isn’t really a concept in Unicode, so your human intuition for 
+* a “character” isn’t really a concept in Unicode, so your human intuition for
   what a “character” is may not match up with what a char is in Rust
 
 ---
@@ -245,7 +254,7 @@ class: left
 
 # Access elements
 
-Access elements by **destructuring** through pattern matching 
+Access elements by **destructuring** through pattern matching
 
 ```rust
 fn main() {
@@ -349,6 +358,6 @@ class: left
 
 * Compound types like tuple and Array
 
-* Tuples can be mixed type 
+* Tuples can be mixed type
 
 * Arrays should be of single type and fixed length
